# rip

./: CMakeLists.txt  Direction.cpp  Direction.h  Pos.cpp  Pos.h  README.md  UI.cpp  UI.h  VoxelPiece.cpp  VoxelPiece.h  Voxels.cpp  Voxels.h  build.sh  main.cpp  utils.cpp  utils.h
glad/include/glad/: glad.h
glad/src/: glad.c
shapes/: 3x3_box.txt  sphere.txt
